--- a/CoreUtilities/LJCDocLib/LJCDocGen/LJCDocGen.csproj
+++ b/CoreUtilities/LJCDocLib/LJCDocGen/LJCDocGen.csproj
@@ -75,7 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ProgramDocGen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
