--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -78,6 +78,9 @@
     <Compile Include="Forms\LJCGenDocListCode.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\MethodTab\ClassItemComboCode.cs" />
+    <Compile Include="Forms\MethodTab\MethodGroupGridCode.cs" />
+    <Compile Include="Forms\MethodTab\MethodItemGridCode.cs" />
     <Compile Include="ProgramGenDocEdit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValuesGenDocEdit.cs" />
