--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Forms\AssemblyTab\AssemblyGroupDetail.Designer.cs">
       <DependentUpon>AssemblyGroupDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingSelectCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\ClassTab\AssemblyItemComboCode.cs" />
     <Compile Include="Forms\AssemblyTab\AssemblyGroupGridCode.cs" />
     <Compile Include="Forms\AssemblyTab\AssemblyItemGridCode.cs" />
@@ -92,6 +95,13 @@
       <DependentUpon>ClassGroupDetail.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ClassTab\ClassGroupGridCode.cs" />
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingGridCode.cs" />
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingSelect.Designer.cs">
+      <DependentUpon>ClassHeadingSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ClassTab\ClassItemGridCode.cs" />
     <Compile Include="Forms\LJCGenDocList.cs">
       <SubType>Form</SubType>
@@ -131,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ClassTab\ClassGroupDetail.resx">
       <DependentUpon>ClassGroupDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ClassGroupHeading\ClassHeadingSelect.resx">
+      <DependentUpon>ClassHeadingSelect.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LJCGenDocList.resx">
       <DependentUpon>LJCGenDocList.cs</DependentUpon>
