--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Forms\AssemblyTab\AssemblyGroupDetail.Designer.cs">
       <DependentUpon>AssemblyGroupDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ClassGroupHeading\ClassHeadingDetail.Designer.cs">
+      <DependentUpon>ClassHeadingDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ClassGroupHeading\ClassHeadingSelectCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,12 @@
     <Compile Include="Forms\LJCGenDocListCode.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\MethodGroupHeading\MethodHeadingDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MethodGroupHeading\MethodHeadingDetail.Designer.cs">
+      <DependentUpon>MethodHeadingDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MethodGroupHeading\MethodHeadingGridCode.cs" />
     <Compile Include="Forms\MethodGroupHeading\MethodHeadingSelect.cs">
       <SubType>Form</SubType>
@@ -146,6 +158,9 @@
     <EmbeddedResource Include="Forms\AssemblyTab\AssemblyGroupDetail.resx">
       <DependentUpon>AssemblyGroupDetail.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ClassGroupHeading\ClassHeadingDetail.resx">
+      <DependentUpon>ClassHeadingDetail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ClassTab\ClassDetail.resx">
       <DependentUpon>ClassDetail.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LJCGenDocList.resx">
       <DependentUpon>LJCGenDocList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MethodGroupHeading\MethodHeadingDetail.resx">
+      <DependentUpon>MethodHeadingDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MethodGroupHeading\MethodHeadingSelect.resx">
       <DependentUpon>MethodHeadingSelect.cs</DependentUpon>
