--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -245,6 +245,16 @@
   <ItemGroup>
     <Content Include="bin\Debug\ConnectionTemplates.xml" />
     <Content Include="bin\Debug\DataConfigs.xml" />
+    <Content Include="Doc\AssemblyGroupGridCode.xml" />
+    <Content Include="Doc\AssemblyItemGridCode.xml" />
+    <Content Include="Doc\ClassGridCode.xml" />
+    <Content Include="Doc\ClassGroupGridCode.xml" />
+    <Content Include="Doc\ClassHeadingGridCode.xml" />
+    <Content Include="Doc\ClassItemGridCode.xml" />
+    <Content Include="Doc\MethodGridCode.xml" />
+    <Content Include="Doc\MethodGroupGridCode.xml" />
+    <Content Include="Doc\MethodHeadingGridCode.xml" />
+    <Content Include="Doc\MethodItemGridCode.xml" />
     <Content Include="Help\Assembly\AssemblyGroupDetail.html" />
     <Content Include="Help\Assembly\AssemblyGroupList.html" />
     <Content Include="Help\Assembly\AssemblyItemDetail.html" />
