GenDoc Edit Updates

--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -246,10 +246,12 @@
     <Content Include="bin\Debug\ConnectionTemplates.xml" />
     <Content Include="bin\Debug\DataConfigs.xml" />
     <Content Include="Doc\AssemblyGroupGridCode.xml" />
+    <Content Include="Doc\AssemblyItemComboCode.xml" />
     <Content Include="Doc\AssemblyItemGridCode.xml" />
     <Content Include="Doc\ClassGridCode.xml" />
     <Content Include="Doc\ClassGroupGridCode.xml" />
     <Content Include="Doc\ClassHeadingGridCode.xml" />
+    <Content Include="Doc\ClassItemComboCode.xml" />
     <Content Include="Doc\ClassItemGridCode.xml" />
     <Content Include="Doc\MethodGridCode.xml" />
     <Content Include="Doc\MethodGroupGridCode.xml" />
