--- a/CoreUtilities/BackupWatcher/BackupWatcher/BackupWatcher.csproj
+++ b/CoreUtilities/BackupWatcher/BackupWatcher/BackupWatcher.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\BackupWatcher.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\ChangeFile.txt" />
+    <Content Include="Doc\BackupWatcher.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
