--- a/CoreUtilities/LJCBackupWatcherHosts/LJCBackupWatcherHost/LJCBackupWatcherHost.csproj
+++ b/CoreUtilities/LJCBackupWatcherHosts/LJCBackupWatcherHost/LJCBackupWatcherHost.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LJCBackupWatcherLib">
-      <HintPath>..\External\LJCBackupWatcherLib.dll</HintPath>
-    </Reference>
     <Reference Include="LJCNetCommon">
       <HintPath>..\External\LJCNetCommon.dll</HintPath>
     </Reference>
@@ -77,6 +74,12 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LJCBackupWatcherLib\LJCBackupWatcherLib.csproj">
+      <Project>{04b82ead-c102-47dd-8c3c-70495f018285}</Project>
+      <Name>LJCBackupWatcherLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
