--- a/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChanges/LJCCreateFileChanges.csproj
+++ b/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChanges/LJCCreateFileChanges.csproj
@@ -33,12 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LJCBackupChangesLib">
-      <HintPath>..\External\LJCBackupChangesLib.dll</HintPath>
-    </Reference>
-    <Reference Include="LJCBackupWatcherLib">
-      <HintPath>..\External\LJCBackupWatcherLib.dll</HintPath>
-    </Reference>
     <Reference Include="LJCNetCommon">
       <HintPath>..\External\LJCNetCommon.dll</HintPath>
     </Reference>
@@ -57,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\CreateFileChangesDefaultsGit.cmd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\CreateFileChangesDefaults.txt" />
+    <Content Include="bin\Debug\CreateFileChangesDefaultsStage.txt" />
+    <Content Include="bin\Debug\CreateFileChangesDefaultsWeb.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LJCCreateFileChangesLib\LJCCreateFileChangesLib.csproj">
