--- a/CoreUtilities/LJCGenText/LJCGenTableCode/LJCGenTableCode.csproj
+++ b/CoreUtilities/LJCGenText/LJCGenTableCode/LJCGenTableCode.csproj
@@ -81,5 +81,6 @@
     </Content>
     <Content Include="Doc\ProgramGenTableCode.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
