--- a/CoreUtilities/LJCDocLib/GenDocScript/App.config
+++ b/CoreUtilities/LJCDocLib/GenDocScript/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
+  </startup>
+  <appSettings>
+    <add key="BeginColor" value="AliceBlue" />
+    <add key="ConnectionString" value="Data Source=DESKTOP-PDPBE34;Initial Catalog=SalesData;Integrated Security=True" />
+    <add key="ConnectionType" value="SQLServer" />
+    <add key="DataConfigName" value="LJCData" />
+    <add key="EndColor" value="LightSkyBlue" />
+    <add key="LocalDbDataAccess" value="true" />
+    <add key="LocalDbService" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
 </configuration>
